--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,20 +24,24 @@ ul {
 }
 /* Header styles */
 header {
-  height: 70px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #fefeff;
-  padding: 0 25px;
+  /* padding: 0 25px; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 nav {
   flex: 1;
   display: flex;
   justify-content: flex-end;
   gap: 20px;
+  margin-right: 20px;
 }
 a.nav-link {
   text-decoration: none;
@@ -54,7 +58,7 @@ a.nav-link:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: calc(100vh - 70px);
+  min-height: 100vh;
   gap: 30px;
   padding: 0 25px;
   flex-wrap: wrap;
@@ -144,6 +148,7 @@ span {
   padding: 40px 20px;
   gap: 30px;
   flex-wrap: wrap;
+  min-height: 100vh;
 }
 .about > div {
   flex: 1;
@@ -400,6 +405,7 @@ footer {
     align-items: center;
     width: 100%;
     margin-top: unset;
+    margin-right: unset;
     padding: 20px 0;
   }
   .service-container {
